fix landscape responsive overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    overflow: hidden;
+    overflow-y: auto;
     font-family: "Outfit", sans-serif;
 }
 
@@ -50,7 +50,7 @@ main {
 }
 
 .text-box {
-    width: 288px;
+    width: 100%;
 }
 
 .text-box > h1 {
@@ -66,16 +66,16 @@ main {
     font-weight: 400;
 }
 
-@media (orientation: landscape) {
+@media (max-device-height: 480px) and (orientation: landscape) {
 
-    main {
-        height: fit-content;
-        padding: 25px 0;
-    }
-    
     html {
         overflow: scroll;
         scroll-behavior: smooth;
+    }
+    
+    main {
+        height: fit-content;
+        padding: 25px 0;
     }
 
 }
